@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST pycam-0.5.1.tar.gz 1680577 SHA256 e26a6db82efa4761a1db6b81de3165898430d5c14d09614b67321105d67e264c SHA512 f880d960f82eb374465a593f3b27e9f72148b3ceb99fde15bee4ccf1078acc8ef44ddfd9ee12f89e5b5e5ee14706b6e5d76eff7d0334c9526866ff263a057994 WHIRLPOOL 3f78eedcc6d745142578ef3e57141cf026b2ebca1a699a340237e2288c9c7054a1226ad47aa947d5de612c44c4445fd451e8adcfe7c0783b59332cb1a12998b9
-EBUILD pycam-0.5.1.ebuild 552 SHA256 ee568c89af00a9a563165189d6683a32a5fdcd0150e93b5aa409c622d3ccbfb9 SHA512 b056faed40ce68abc11ad40e84433c4673e3cee303d3d1e717110bfd5c95fee70583943098c4c165ab50227a9fc5c16cd6b1ffb614d3306ad573e0cf228b51a8 WHIRLPOOL 6474fddd5a3a6a38f57a387b09d768f7fb3bb919307e6e1ac4938168706ca23a0d8925f57afec67e74b29391cdd98e4502241d2fdb241c8b34e47a76ad5fbbda
-MISC ChangeLog 332 SHA256 d61a3bac5edb2f5635d7e50a7c95e59009bd1338a55297bc93f2fb650fcf427a SHA512 fe53deb38ec5d8aba055168dfb0eccf14bed9d3e129338b3bda3e4e59195a66027107957fafabb5d1b4aefc0742251c22231bc574819917d98a193953bfd7ff2 WHIRLPOOL bdde71ca31699c67d2ea90ac9c1de8371d8a27642f702d66adb9dd4e93299a2c7fd1d245e93b5970994ea66ef322063794a7cc36199c20fb233871e88c82d368
+DIST pycam-0.6_pre20130416.tar.gz 5766314 SHA256 d927682785178b8aba57e275b6af0b9203263840b0648b023616f5f6cd5867d6 SHA512 04d0a3328febbe58010cf9ad990b8c059f9fe0a17946d8485979082dfaa0b3b8705ffdcd695dca5887d9892a55285cca7acf774fe7c407240103da2de92dc9a1 WHIRLPOOL d6ca3504bca4e1d9e0830c5bd0f765d6aad0fb869890d07e430f6f05dc50103d209c7c90d8b866a9dee9fc20df739ed38f56005718c67786f318a70cea9b0719
+EBUILD pycam-0.5.1.ebuild 593 SHA256 c010097c483a210e6e147bcca7ff6142b1d1197b262314d4813f67a316eab0b7 SHA512 c3c12c75d8cb89b002ab81e75ddb3bc3eb9b93a4514c9e2b288fe335182f7f71aafea6ff21e09d4f6bea3165427ddaf9c821965081dc50fdd09bf68fd6cf11c9 WHIRLPOOL 0f9f10c8cd07df749c223e46eed325914d665e2cd8e5bc63aa3a24d6c5983e78f9bee25b73b26186c0df776f49d8f1c30c09c33e4f645c557aba3ab51b5a0e1e
+EBUILD pycam-0.6_pre20130416.ebuild 626 SHA256 e463d58de229e5a888412c178cc2b86c082d57674ea029c05b96d364bb0e0584 SHA512 f449577bbc2a756931a05306caf1b7f8611fbfecdcf9d3e097cf673aedb6955370d4fda88af0ede4b371204b0be9dc8a9b0b4f7225c9185a2cc19c6673f47da9 WHIRLPOOL e42fe0fa55c20383ec1c554291e96645557d7939857bd3b2c2b1a02688609fd256c7d2110072f778bc13d1c1fcfcce23dbc7d21688f44fcacfc57284510d6d81
+MISC ChangeLog 522 SHA256 488294458687ca24021354c0744c8246b5849d12a2ebb9ac8ec57702814202fa SHA512 b57d03516f464cf52d68d77b96f8dd7d4890053bb42139c6675e244d1401339bcdba789d479747f52a1eb338c2dc5f5350a607af4b39261128551207d15b51fa WHIRLPOOL 008e830eb34c7ff4a7558642f38e4a6e145144fd5efc80be687b411a68a98c9603085f70a53af8f42abe3c40228bf022167014fd4b4f9dfab6a7b09316076307
 MISC metadata.xml 201 SHA256 abd74d97472e0eac0f8850a8049e1acef8c4740eb3605b315738b29830a26e2c SHA512 ac0c7586663b105d0cb96da51cfb2bde18b4115b628885495287938929091cf673d5a443538e9e3a1721433428dbc57134c4e56047152d208f8e65f16dbc2054 WHIRLPOOL f3f07e24525039c88fc2b20817ed05a611af3baca89186322d0647edf949423e8075fc2ffdf6d535219fe5b13115d5345775dba8e37b71154376383a5d6df462
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRgsxqAAoJEO1RxJ84ipLkXCQH/3qVX4Bf1ZxvMe7bc5P0+0TK
-KW4THSVVf0J+DtvDMLA/Cd0ZN8FrN4GMvKtyQuLdRseInT+Z922fB7c4sjBLL5Z9
-6cTrp4eLX3saCGTVilr2qekk5LHQLrnGOLreVbz7Pp0XdDgH9xquMlKJ4FBWljDv
-T5tq+Xz4qx9AiB9CUPeHALCDBDwNXHL+uBjOhplzMLz8A4b6W7DZHLKeEJToPRQH
-bfRBHlMlOP09u8WOw/Zria/eZovxHpqkzkOr1F1OpUV2+MrYtRsiXCNlmBL1XlG0
-DsFM52qIFsZz3OktHNuRIUDJDOtSKHNHWu7ZShetH+egXkVGIcoutsKt1gBSIs4=
-=exID
+iQEcBAEBCAAGBQJSeLO6AAoJEO1RxJ84ipLk/pMH/3AIR4ZIq2DF1/+ebYQ16sTs
+/IDoOOv9Vr/pgxqU8Pq8gq0DxGwP8ly8Ee3ETQNkJbU+CAlTLs6CWmg9jg8bvHKi
+a2VwZqm1O6zz4OhIUt7xQHVQk4pxI3BH/V1QJ2fOIkj8htfDTdC3ZqCQF0yLTxvR
+pmv2GKbFGWG+mnZEYSIiuJJK3MaPaoManpv2w9NYpAs5uwBZ3ywyJRoRopQ1F9QA
+2lgDh/KyAqQgC+Eh8UBUurUBUgcpsB5IT7/ql7DwbIsvIeR3BKq2SCa/+/cQ9iUI
+AcCmIdCVqDF64KBsVZsAgN9tPyU2ifPdkfOjZuIqXCWf/RfXc0MiqFHQgGLOaKY=
+=dkaJ
 -----END PGP SIGNATURE-----
