@@ -9,6 +9,6 @@ LICENSE=GPL-3
 RDEPEND=dev-python/pygtk dev-python/pygtkglext dev-python/pyopengl python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_7 )
 SLOT=0
-SRC_URI=mirror://sourceforge/pycam/pycam-0.5.1.tar.gz
+SRC_URI=http://dev.gentoo.org/~slis/pycam-0.6_pre20130416.tar.gz
 _eclasses_=distutils-r1	26fe65665d086911163d4502473bd093	eutils	4878e7f88afc0ba0866ac112190b0fd4	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	python-r1	b81583006559e9b008883355c9889e29	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=9ab34f4d69443c9b558dc883503febff
+_md5_=6656bdb1a708ea8c7edaf671b99b602b
