@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/pycam
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/pycam/ChangeLog,v 1.1 2013/05/02 20:25:39 slis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/pycam/ChangeLog,v 1.2 2013/11/05 09:00:14 slis Exp $
+
+*pycam-0.6_pre20130416 (05 Nov 2013)
+
+  05 Nov 2013; Sławek Lis <slis@gentoo.org> +pycam-0.6_pre20130416.ebuild,
+  pycam-0.5.1.ebuild:
+  added new version, updated old to use new eclasses
 
 *pycam-0.5.1 (02 May 2013)
 
